# DunceAgent

./: .gitignore  LICENSE  README.md  docker-compose.yaml  kaggle.json
next/: Dockerfile  README.md  jest.config.js  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.test.json  types.d.ts
next/.next/: _events.json  app-build-manifest.json  trace
next/.next/cache/: config.json
next/.next/server/: app-paths-manifest.json  edge-runtime-webpack.js  middleware.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json  webpack-runtime.js
next/app/: chat.tsx  globals.css  layout.tsx  logout.tsx  page.tsx
next/app/contexts/: DialogueManagerContext.tsx
next/components/: ASCIITtitle.tsx  ChatWindow.tsx  Checkboxes.tsx  Loading.tsx  MainTextArea.tsx  Navbar.tsx  Popup.tsx  SessionProviderWrapper.tsx  ShowVectorDbs.tsx
next/hooks/: useCustomInput.tsx  useOnSubmit.tsx
next/services/: authenticate.ts
qdrant_data/: raft_state.json
server/: Dockerfile  pyproject.toml
server/app/src/: README.md  batches.py  beggars_opera_scraper.py  elwin_popeworks_scraper.py  embeddings.py  get_data.py  iliad_odyssey_scraper.py  main.py  meltano_api.py  memoirs_scriblerus_scraper.py  miscellanies_scraper.py  moral_essays_scraper.py  nodes.py  ontology_nodes.py  peri_bathous_scraper.py  pope_letters_scraper.py  scraper.py  swift_gulliver_scraper.py  swift_miscellanies_scraper.py  swift_tub_scraper.py  three_hours_scraper.py  threebk_dunciad_scraper.py  volume_one_scraper.py
(+186 files in other folders)
